<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context="my.com.mvptestapp.icarasia.loginSignUp.fragment.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="12sp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_your_password_hint"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/fname_hint"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:padding="-30dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/last_name"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/lname_hint"
                android:textSize="12sp"
                android:inputType="textPersonName"
                android:padding="-30dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/phone_hint"
                android:textSize="12sp"
                android:inputType="phone"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_types"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/userTypeSpinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_types"
                android:backgroundTint="@color/colorPrimary"
                android:minHeight="50dp"
                android:textSize="12sp"
                tools:targetApi="lollipop"/>

            <Button
                android:id="@+id/signUpBtn"
                android:onClick="onSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_btn" />
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone"
        tools:targetApi="lollipop" />
</FrameLayout>
